--- a/.env
+++ b/.env
@@ -15,7 +15,7 @@
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
 ###> symfony/framework-bundle ###
-#APP_ENV=dev
+APP_ENV=prod
 APP_DEBUG=0
 APP_SECRET=603f111c1739c4106794279c53f71f59
 APP_URL=https://www.rdn.by/
