--- a/.cpanel.yml
+++ b/.cpanel.yml
@@ -2,5 +2,5 @@
 deployment:
     tasks:
         - export REPOPATH=/home/rdnby/repositories/rdn3/*
-        - export SITEPATH=/home/rdnby/public_html/
+        - export SITEPATH=/home/rdnby/rdn.by/
         - /bin/rsync -rav --exclude '.git' --exclude '.cpanel.yml' --del $REPOPATH $SITEPATH
