--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -5,6 +5,7 @@ framework:
     http_method_override: false
     handle_all_throwables: true
     disallow_search_engine_index: false
+    http_cache: true
 
     # Enables session support. Note that the session will ONLY be started if you read or write from it.
     # Remove or comment this section to explicitly disable session support.
